[package]
name = "ubores"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
mio = { version = "1.0.2", features = ["net"] }
anyhow = "1.0.94"
aead = "0.5.2"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
uuid = {version = "1.11.0", features = ["serde","v4"]}
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.33"